2014/pyconkr/static/css/pyconkr.css
* {
    font-family: 'Open Sans', 'Helvetica Neue', 'Apple SD Gothic Neo', 'Nanum Gothic', 'Arial', 'Apple Gothic', sans-serif;
    font-weight: 400;
    line-height: 160%;
}

body, html {
    margin: 0;
    font-size: 15px;
    color: #666;
}

h1, h2, h3, h4, h5, h6, th, .title {
    font-family: 'Lato', 'Helvetica Neue', 'Apple SD Gothic Neo', 'Nanum Gothic', 'Arial', 'Apple Gothic', sans-serif;
    color: #333;
}

h1, h2, h3, h4, h5, h6, th {
    font-weight: 700;
}

.row {
    margin-left: 0 !important;
    margin-right: 0 !important;
}

.navbar {
    padding: 10px 0;
    margin-bottom: 0px !important;
}

.navbar-brand {
    float: none;
    padding: 5px 25px 5px 15px;
}

.navbar-brand img {
    width: auto;
    height: 50px;
}

.navbar-default {
    background: none;
    border: 0;
    border-radius: 0;
}

.navbar-default .navbar-nav>li>a, .dropdown-menu>li>a {
    font-family: 'Lato', 'Helvetica Neue', 'Apple SD Gothic Neo', 'Nanum Gothic', 'Arial', 'Apple Gothic', sans-serif;
    color: #333;
}

.navbar-default .navbar-collapse, .navbar-default .navbar-form {
    border: 0;
}

.navbar-default .glyphicon {
    margin-right: 3px;
    top: 2px;
}

.navbar-default .glyphicon-python {
    width: 16px;
    height: 16px;
    background: url("../image/python-black.png");
    background-size: 100% 100%;
    opacity: 0.8;
}

.wrap {
}

.content {
    padding-bottom: 100px;
}

.titlebar {
    position: relative;
    background-color: #FAFAFA;
    padding: 12px 0 20px 0;
    margin-bottom: 10px;
    border-bottom: 1px solid #E7E7E7;
    overflow: hidden;
}

.titlebar h1 {
    font-size: 42px;
}

.titlebar .building {
    position: absolute;
    width: auto;
    height: 100%;
    top: 0px;
    right: 0;
    z-index: 2;
}

.titlebar .background {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0.1;
}

.titlebar .background .mountain {
    position: absolute;
    left: 50%;
    width: 50%;
    height: 50%;
    bottom: -15%;
}

.titlebar .background .tower-1 {
    position: absolute;
    left: 64%;
    width: auto;
    height: 70%;
    bottom: 27%;
}

.titlebar .background .tower-2 {
    position: absolute;
    left: 65%;
    width: auto;
    height: 30%;
    bottom: 27%;
}

.titlebar .background .tower-3 {
    position: absolute;
    left: 92%;
    width: auto;
    height: 50%;
    bottom: 23%;
}

.dancheong {
    width: 100%;
}

.dancheong td {
    font-size: 1px;
    line-height: 4px;
}

.frontpage {
    position: relative;
    padding: 3% 0 20% 0;
    background-color: #8795AD;
    background-image: -webkit-gradient(linear,left top,left bottom,from(#FFFFFF),to(#8795AD));
    background-image: -webkit-linear-gradient(top,#FFFFFF 0,#8795AD 100%);
    background-image: -o-linear-gradient(top,#FFFFFF 0,#8795AD 100%);
    background-image: linear-gradient(to bottom,#FFFFFF 0,#8795AD 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FFFFFF', endColorstr='#8795AD', GradientType=0);
    background-repeat: repeat-x;
    overflow: hidden;
    z-index: 1;
}

.frontpage .building {
    position: absolute;
    width: 50%;
    height: auto;
    top: 220px;
    right: 0;
    z-index: 2;
}

.frontpage .courtesy {
    position: absolute;
    bottom: 0;
    z-index: 3;
    margin: 5px;
}

.frontpage .courtesy a {
    z-index: 3;
    color: #EEE;
    font-size: 9px;
    line-height: 9px;
    opacity: 0.5;
}

.frontpage .slogan {
    color: #FAFAFA;
    text-align: center;
    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
    position: relative;
    z-index: 3;
    top: 10%;
}

.frontpage .slogan img {
    width: 50%;
    height: auto;
}

.frontpage .slogan h1 {
    color: #FFFFFF;
}

.frontpage .background {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    top: 300px;
    z-index: 1;
}

.frontpage .background .mountain {
    position: absolute;
    width: 100%;
    height: 25%;
    left: 0;
    bottom: 0;
}

.frontpage .background .tower-1 {
    position: absolute;
    left: 22%;
    width: 2%;
    height: auto;
    bottom: 20%;
}

.frontpage .background .tower-2 {
    position: absolute;
    left: 75%;
    width: 2%;
    height: auto;
    bottom: 16%;
}

.frontpage .background .tower-3 {
    position: absolute;
    left: 25%;
    width: 1.25%;
    height: auto;
    bottom: 22%;
}


.sponsors {
}

.sponsors h4 {
    text-align: center;
}

.sponsors ul {
    margin: 0;
    padding: 0;
}

.sponsors li {
    list-style: none;
    display: inline-block;
    width: 49%;
    max-width: 280px;
}

.sponsors li .logo {
    width: 100%;
    padding: 5%;
    height: auto;
}

.announcements {
    margin: 0;
    padding: 0;
}

.timetable .title {
    font-size: 110%;
}

.footer {
    padding: 10px 0;
    text-align: center;
    border-top: 1px solid #E7E7E7;
}

.footer p {
    font-family: 'Lato', 'Helvetica Neue', 'Apple SD Gothic Neo', 'Nanum Gothic', 'Arial', 'Apple Gothic', sans-serif;
    font-size: 90%;
}

.footer .pyconkr-badge {
    width: 128px;
    height: auto;
    padding: 10px 0 20px;
}

@media (max-width: 992px) {
    .navbar-brand img {
        height: 40px;
    }

    .navbar-nav>li>a {
        padding: 10px;
    }

    .titlebar {
        padding: 8px 0 16px 0;
        margin-bottom: 8px;
    }

    .titlebar h1 {
        font-size: 36px;
    }
}

@media (max-width: 480px) {
    .frontpage .courtesy, .building, .titlebar .background {
        display: none;
    }

    .titlebar {
        padding: 4px 0 8px 0;
        margin-bottom: 4px;
    }

    .titlebar h1 {
        font-size: 28px;
    }
}

